# file-manager

./: .gitignore  Makefile  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml  nox.yml  test.yml
docs/: quickstart.md
notebooks/guides/: quickstart.ipynb
src/file_manager/: __init__.py  exceptions.py  file_manager.py
src/file_manager/file_handlers/: __init__.py  azure_handler.py  base_handler.py  get_handler.py  get_handler_type.py  google_handler.py  local_handler.py  none_handler.py  s3_handler.py
src/swapstore/: __init__.py  exceptions.py  file_manager.py
src/swapstore/file_handlers/: __init__.py  azure_handler.py  get_handler_type.py  google_handler.py  local_handler.py  none_handler.py  s3_handler.py
tests/: conftest.py  test_file_manager.py
tests/file_handlers/: test_get_handler.py  test_get_handler_type.py  test_save_load.py
