[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "file_manager"
version = "0.0.1"
authors = [{name="Roland Webster", email="rolandmwebster@gmail.com"}]
dependencies = [
    "pandas==2.2.2",
    "pyarrow==17.0.0",
    "pathlib==1.0.1",
    "boto3==1.35.10",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.3",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ipykernel==6.29.5",
    "nox==2024.4.15",
]

[tool.ruff.lint]
select = ["I"]