[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swapstore"
version = "0.0.1"
authors = [{name="Roland Webster", email="rolandmwebster@gmail.com"}]
dependencies = [
    "pandas==2.2.2",
    "pyarrow==17.0.0",
    "pathlib==1.0.1",
]

[project.optional-dependencies]

s3 = [
    "boto3==1.35.10",
]

google = [
    "google-cloud-storage==2.18.2",
]

azure = [
    "azure-storage-blob==12.22.0",
    "azure-identity==1.17.1",
]

full = [
    "swapstore[s3]",
    "swapstore[google]",
    "swapstore[azure]",
]

lint = [
    "ruff==0.6.3",
]
test = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "python-dotenv==1.0.1",
]
misc = [
    "ipykernel==6.29.5",
    "nox==2024.4.15",
]
dev = [
    "swapstore[full]",
    "swapstore[misc]",
    "swapstore[test]",
    "swapstore[lint]",
]

[tool.ruff.lint]
select = ["I"]